fixed overflow text card

--- a/TrippoSpring/src/main/webapp/css/board/boardList.css
+++ b/TrippoSpring/src/main/webapp/css/board/boardList.css
@@ -4,7 +4,7 @@ body {
 	background: linear-gradient(to bottom, #fddfdf, #ffffd8, #e0fefe);
 	display: flex;
 	flex-direction: column;
-	justify-content: center; 
+	justify-content: center;
 	align-items: center;
 }
 
@@ -12,16 +12,17 @@ body {
 	align-items: flex-start;
 	width: 100%;
 	height: 100px;
-	margin-bottom:25px;
+	margin-bottom: 25px;
 }
 
 #wrap {
-	margin-top:0px;
+	margin-top: 0px;
 }
+
 #page-wrap {
 	display: flex;
 	flex-direction: column;
-	justify-content: center; 
+	justify-content: center;
 	align-items: center;
 }
 
@@ -126,9 +127,8 @@ body {
 #food {
 	background-color: #f78585;
 	border-radius: 20px;
-	margin-top:10px !important;
+	margin-top: 10px !important;
 }
-
 
 #attraction {
 	background-color: #c2c605;
@@ -153,6 +153,41 @@ body {
 }
 
 .photospot_card-text {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	display: block;
+	color: black;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: normal;
+	text-align: left;
+	word-wrap: break-word;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
+.food_card-text {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	display: block;
+	color: black;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: normal;
+	text-align: left;
+	word-wrap: break-word;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
+.attr_card-text {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 	display: block;
 	color: black;
 	width: 100%;
@@ -167,26 +202,23 @@ body {
 }
 
 /* modal 스타일 ----------- */
-
 #delete-btn {
-	float:right;
+	float: right;
 }
 
 .modal-dialog-scrollable .modal-content {
-  max-height: calc(100vh - 200px); /* 스크롤 영역의 최대 높이를 설정하세요. 필요에 따라 조정할 수 있습니다. */
-  overflow-y: auto;
+	max-height: calc(100vh - 200px);
+	/* 스크롤 영역의 최대 높이를 설정하세요. 필요에 따라 조정할 수 있습니다. */
+	overflow-y: auto;
 }
-
 
 #addPostModal-btn {
 	float: right;
 }
 
 #PostModalBtn-div {
-	width:98%;
+	width: 98%;
 }
-
-
 
 .modal {
 	display: none;
@@ -198,7 +230,6 @@ body {
 	height: 100%;
 	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.4);
-	
 }
 
 .modal-dialog {
@@ -210,7 +241,6 @@ body {
 	padding: 20px;
 	border: 1px solid #888;
 	border-radius: 1rem !important;
-	
 }
 
 .modal-header {
